force-app/main/default/objects/WL_Orders2__c/WL_Orders2__c.object-meta.xml
<CustomObject>
    <description>Order용 Custom Object</description>
    <label>WL_Order2</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>WL_Order2</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WL_Order2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>