force-app/main/default/objects/WL_Orders2__c/fields/IsReturned__c.field-meta.xml
<CustomField>
    <fullName>IsReturned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Return된 Order인지 확인용 필드</description>
    <inlineHelpText>Return된 Order인지 확인용 필드</inlineHelpText>
    <label>IsReturned</label>
    <type>Checkbox</type>
</CustomField>