force-app/main/default/objects/WL_Orders2__c/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Order ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>