force-app/main/default/objects/WL_Orders2__c/fields/RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>RegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegionalManager</label>
    <referenceTo>WL_User__c</referenceTo>
    <relationshipLabel>WL_Order2s</relationshipLabel>
    <relationshipName>WL_Order2s</relationshipName>
    <type>Lookup</type>
</CustomField>