force-app/main/default/objects/WL_Orders2__c/fields/Sales_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_ID__c</fullName>
    <label>Sales Person ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>