force-app/main/default/objects/WL_Orders2__c/fields/SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>SalesPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SalesPrice</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>