force-app/main/default/objects/WL_Orders2__c/fields/WL_Contact__c.field-meta.xml
<CustomField>
    <fullName>WL_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WL_Contact</label>
    <referenceTo>WL_Contact__c</referenceTo>
    <relationshipLabel>WL_Order2s</relationshipLabel>
    <relationshipName>WL_Order2s</relationshipName>
    <type>Lookup</type>
</CustomField>