force-app/main/default/objects/WL_Orders2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_ID__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>Ship_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>